# djangorodionhub

./: .env.template  Dockerfile  README.md  docker-compose.yaml  not-a-virus.txt  pyproject.toml  requirements.txt  timeweb_key
Django_Cache/mysite/mysite/: settings.py
Django_Cache/mysite/shopapp/: models.py  views.py
Testing/mysite/myauth/: tests.py  urls.py  views.py
Testing/mysite/shopapp/: tests.py  urls.py  views.py
ege/: ege.py
import_export/: devices.csv
import_export/mysite/blogapp/: admin.py  models.py  sitemap.py  urls.py  views.py
import_export/mysite/mysite/: settings.py  sitemaps.py  urls.py
import_export/mysite/shopapp/: admin.py  common.py  forms.py  models.py  sitemaps.py  urls.py  views.py
logging/: Dockerfile  demo.py  docker-compose.yaml
logging/mysite/: log.txt  requirements.txt
logging/mysite/mysite/: settings.py  urls.py
logging/mysite/shopapp/: views.py
mysite/: requirements.txt  some_file_pkV1Ob1.txt  textfile.txt
mysite/myapiapp/: serializers.py  urls.py  views.py
mysite/myauth/: models.py  urls.py  views.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/requestdataapp/: forms.py  middlewares.py  urls.py  views.py
mysite/shopapp/: admin.py  admin_mixins.py  forms.py  models.py  serializers.py  urls.py  views.py
mysite/shopapp/migrations/: 0001_initial.py  0002_product_created_at_product_discount_product_price.py  0003_product_archived.py  0004_oreder.py  0005_oreder_user.py  0006_oreder_products.py  0008_oreder_receipt.py  (+4 more)
(+35 files in other folders)
