[project]
name = "djangorodionhum"
version = "0.1.0"
description = ""
authors = [
    {name = "Родион",email = "rodionignatov096@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.2,<7.0.0)",
    "django-rest-framework (>=0.1.0,<0.2.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "django-filter (>=25.2,<26.0)",
    "django-debug-toolbar (>=6.2.0,<7.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "gunicorn (>=25.0.3,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
